<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">
    <CheckBoxPreference
        android:defaultValue="false"
        android:key="user_present_today"
        android:summaryOff="Unused"
        android:summaryOn="Used Today"
        android:title="User Present Today" />

    <CheckBoxPreference
        android:defaultValue="false"
        android:key="@string/send_email_check"
        android:summaryOff="Don't send email"
        android:summaryOn="Send update as email"
        android:title="@string/send_email"
        android:visibility="gone"/>

    <EditTextPreference
        android:key="time_used"
        android:editable="false"
        android:title="Phone Last Used At"
        android:summary="phone last used time"
        android:defaultValue=""
        />


    <EditTextPreference
        android:defaultValue=""
        android:editable="false"
        android:key="@string/next_time"
        android:summary="Next message time"
        android:title="Next message at: "/>

    <EditTextPreference
        android:defaultValue=""
        android:key="@string/contact_num_key"
        android:summary="@string/contact_phone"
        android:title="Contact Phone Number: "/>


</PreferenceScreen>